candeactivate route gurd

--- a/src/app/admin/components/create-user/create-user.component.html
+++ b/src/app/admin/components/create-user/create-user.component.html
@@ -1,9 +1,9 @@
 <div class="cp">
     <div class="form-container">
         <h2>Create User</h2>
-        <input type="text" placeholder=" Name">
-        <input type="text" placeholder="Email">
-        <input type="text" placeholder="Address">
+        <input type="text" placeholder=" Name" [(ngModel)]="name">
+        <input type="text" placeholder="Email" [(ngModel)]="email">
+        <input type="text" placeholder="Address" [(ngModel)]="address">
 
         <button type="submit">Submit</button>
     </div>
