--- a/src/app/admin/components/admin/admin.component.css
+++ b/src/app/admin/components/admin/admin.component.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
     height: 100vh;
-    margin: 0;
+    padding: 50px;
     background-color: #f2f2f2;
 }
 
